[package]
name = "private-metadata"  # TODO. candy... tootsie-pop?
version = "0.0.1"
description = "Encrypted metadata URI and assets"
authors = [
    "Lawrence Wu <larry.wu@solana.com>",
]
keywords = ["solana"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "0.9.1"
arrayref = "0.3.6"
base64 = "0.13"
bincode = "1"
bytemuck = { version = "1.7.2", features = ["derive"] }
byteorder = { version = "^1.2.3", default-features = false }
curve25519-dalek = { path = "/Users/lwu/code/solana/curve25519-dalek", features = ["serde"] }
curve25519-dalek-onchain = { path = "/Users/lwu/code/solana/curve25519-dalek-onchain/program", features = ["no-entrypoint"] }
lazy_static = "1.4.0"
merlin = { path = "/Users/lwu/code/solana/merlin" }
mpl-token-metadata = { path = "../../token-metadata/program", features = ["no-entrypoint"] }
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9"
solana-program = "1.9.3"
spl-associated-token-account = { version = "1.0.3", features = [
    "no-entrypoint"
] }
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
subtle = "2"
thiserror = "1"
zeroize = { version = "1.2.0", default-features = false, features = ["zeroize_derive"] }


[target.'cfg(not(target_arch = "bpf"))'.dependencies]
bs58 = "0.4.0"
rand_core = "0.6.3"
serde_json = "1.0"
solana-sdk = "1.9.3"


[dev-dependencies]
tarpc = "0.27.2"
time = "0.1.40"
solana-program-test = "1.9.3"
