[package]
name = "stealth-cli"
version = "0.0.1"
description = "Encrypted metadata URI and assets"
authors = [
    "Metaplex Developers <dev@metaplex.com>",
    "Lawrence Wu <larry.wu@solana.com>",
]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
keywords = ["solana"]
edition = "2018"
license = "AGPL-3.0-only"
readme = "README.md"
publish = false

[dependencies]
base64 = "0.13"
bs58 = "0.4.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
clap = "2.33.3"
curl = "0.4.41"
curve25519-dalek = { git = "https://github.com/lwus/curve25519-dalek", features = ["serde"] }
curve25519-dalek-onchain = { git = "https://github.com/lwus/curve25519-dalek-onchain", features = ["no-entrypoint"] }
futures = "0.3.18"
openssl = "0.10.38"
stealth = { path = "../program", features = ["no-entrypoint"] }
regex = "1.5.4"
serde_json = "1.0"
solana-clap-utils = "1.9.4"
solana-cli-config = "1.9.4"
solana-client = "1.9.4"
solana-logger = "1.9.4"
solana-remote-wallet = "1.9.4"
solana-sdk = "1.9.4"
solana-transaction-status = "1.9.4"
spl-associated-token-account = { version = "1.0.3", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
tokio = { version = "1", features = ["full"] }

